[gd_scene load_steps=35 format=2]

[ext_resource path="res://MysteryHouse.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/button_left11.png" type="Texture" id=4]
[ext_resource path="res://gfx/button_left12.png" type="Texture" id=5]
[ext_resource path="res://gfx/button_left13.png" type="Texture" id=6]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=7]
[ext_resource path="res://gfx/darkblue_button12.png" type="Texture" id=8]
[ext_resource path="res://gfx/button_right11.png" type="Texture" id=9]
[ext_resource path="res://gfx/button_right12.png" type="Texture" id=10]
[ext_resource path="res://gfx/button_right13.png" type="Texture" id=11]
[ext_resource path="res://gfx/button_up11.png" type="Texture" id=12]
[ext_resource path="res://gfx/button_up12.png" type="Texture" id=13]
[ext_resource path="res://gfx/button_up13.png" type="Texture" id=14]
[ext_resource path="res://gfx/button_down11.png" type="Texture" id=15]
[ext_resource path="res://gfx/button_down12.png" type="Texture" id=16]
[ext_resource path="res://gfx/button_down13.png" type="Texture" id=17]
[ext_resource path="res://gfx/button_steps11.png" type="Texture" id=18]
[ext_resource path="res://gfx/button_steps12.png" type="Texture" id=19]
[ext_resource path="res://gfx/button_steps13.png" type="Texture" id=20]
[ext_resource path="res://gfx/button_solve11.png" type="Texture" id=21]
[ext_resource path="res://gfx/button_solve12.png" type="Texture" id=22]
[ext_resource path="res://gfx/button_solve13.png" type="Texture" id=23]
[ext_resource path="res://gfx/button_question11.png" type="Texture" id=24]
[ext_resource path="res://gfx/button_question12.png" type="Texture" id=25]
[ext_resource path="res://gfx/button_submit11.png" type="Texture" id=26]
[ext_resource path="res://gfx/button_submit12.png" type="Texture" id=27]
[ext_resource path="res://gfx/button_restart11.png" type="Texture" id=28]
[ext_resource path="res://gfx/button_restart12.png" type="Texture" id=29]
[ext_resource path="res://gfx/button_cancel11.png" type="Texture" id=30]
[ext_resource path="res://gfx/button_cancel12.png" type="Texture" id=31]

[sub_resource type="GDScript" id=1]

script/source = ""

[sub_resource type="DynamicFont" id=2]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
script = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="ButtonGroup" id=3]

resource_local_to_scene = true

[node name="MysteryHouse" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Blackboard" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="MainText" type="RichTextLabel" parent="Blackboard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Text goes here"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[node name="GoLeft" type="TextureButton" parent="Blackboard" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 600.0
margin_right = 99.0
margin_bottom = 649.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TemplateButton" type="TextureButton" parent="Blackboard" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = 280.0
margin_right = -21.0
margin_bottom = 329.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="GoRight" type="TextureButton" parent="Blackboard" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 600.0
margin_right = 219.0
margin_bottom = 649.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="GoForward" type="TextureButton" parent="Blackboard" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 540.0
margin_right = 159.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="GoBackward" type="TextureButton" parent="Blackboard" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 660.0
margin_right = 159.0
margin_bottom = 709.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 17 )
_sections_unfolded = [ "Textures" ]

[node name="GoSteps" type="TextureButton" parent="Blackboard" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 600.0
margin_right = 159.0
margin_bottom = 649.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Textures" ]

[node name="Solve" type="TextureButton" parent="Blackboard" index="7"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 240.0
margin_right = 55.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_disabled = ExtResource( 23 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Help" type="TextureButton" parent="Blackboard" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 980.0
margin_top = 600.0
margin_right = 1029.0
margin_bottom = 649.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
_sections_unfolded = [ "Textures" ]

[node name="TemplateLabel" type="RichTextLabel" parent="Blackboard" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = 340.0
margin_right = 180.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Solver" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="MainText" type="RichTextLabel" parent="Solver" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Text goes here"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[node name="Submit" type="TextureButton" parent="Solver" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -490.0
margin_top = 270.0
margin_right = -340.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Restart" type="TextureButton" parent="Solver" index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 270.0
margin_right = 76.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 29 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Cancel" type="TextureButton" parent="Solver" index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 340.0
margin_top = 270.0
margin_right = 490.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 31 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="Blackboard/GoLeft" to="." method="_on_GoLeft_pressed"]

[connection signal="pressed" from="Blackboard/GoRight" to="." method="_on_GoRight_pressed"]

[connection signal="pressed" from="Blackboard/GoForward" to="." method="_on_GoForward_pressed"]

[connection signal="pressed" from="Blackboard/GoBackward" to="." method="_on_GoBackward_pressed"]

[connection signal="pressed" from="Blackboard/GoSteps" to="." method="_on_GoSteps_pressed"]

[connection signal="pressed" from="Blackboard/Solve" to="." method="_on_Solve_pressed"]

[connection signal="pressed" from="Blackboard/Help" to="." method="_on_Help_pressed"]

[connection signal="pressed" from="Solver/Submit" to="." method="_on_Submit_pressed"]

[connection signal="pressed" from="Solver/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="Solver/Cancel" to="." method="_on_Cancel_pressed"]


